{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 83,
  "lineage": "22f849cf-dab6-d7ba-7cd4-be3b1a3722a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cbd2a4568fb675",
            "association_id": "eipassoc-0d77e63c43706d392",
            "domain": "vpc",
            "id": "eipalloc-027cbd2a4568fb675",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fcd2668b90eb35ec",
            "private_dns": "ip-172-16-1-218.ap-southeast-1.compute.internal",
            "private_ip": "172.16.1.218",
            "public_dns": "ec2-18-140-153-159.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.153.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0491000b54c71055a",
            "association_id": "eipassoc-0800f201d475ebd63",
            "domain": "vpc",
            "id": "eipalloc-0491000b54c71055a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f532247b4fac6f2a",
            "private_dns": "ip-172-16-2-197.ap-southeast-1.compute.internal",
            "private_ip": "172.16.2.197",
            "public_dns": "ec2-54-255-37-238.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.37.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:internet-gateway/igw-0aba73360cfd43408",
            "id": "igw-0aba73360cfd43408",
            "owner_id": "921649896359",
            "tags": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:loadbalancer/app/Demo-ALG-tf/a1ccd74a567de38c",
            "arn_suffix": "app/Demo-ALG-tf/a1ccd74a567de38c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALG-tf-1771623557.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:loadbalancer/app/Demo-ALG-tf/a1ccd74a567de38c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALG-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f30acd5719af78eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0892fa5c8aa6fb873"
              },
              {
                "subnet_id": "subnet-0b3ea9c4bc27b8c17"
              }
            ],
            "subnets": [
              "subnet-0892fa5c8aa6fb873",
              "subnet-0b3ea9c4bc27b8c17"
            ],
            "tags": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-01ed0b347290ee89b",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:listener/app/Demo-ALG-tf/a1ccd74a567de38c/85504dfd65837d3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:targetgroup/Demo-TargetGroup-tf/a62d81efca9a9028",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:listener/app/Demo-ALG-tf/a1ccd74a567de38c/85504dfd65837d3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:loadbalancer/app/Demo-ALG-tf/a1ccd74a567de38c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:targetgroup/Demo-TargetGroup-tf/a62d81efca9a9028",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/a62d81efca9a9028",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921649896359:targetgroup/Demo-TargetGroup-tf/a62d81efca9a9028",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cbd2a4568fb675",
            "connectivity_type": "public",
            "id": "nat-0401094cccf516a88",
            "network_interface_id": "eni-0fcd2668b90eb35ec",
            "private_ip": "172.16.1.218",
            "public_ip": "18.140.153.159",
            "subnet_id": "subnet-0892fa5c8aa6fb873"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0491000b54c71055a",
            "connectivity_type": "public",
            "id": "nat-0aa18cd7f348cef5e",
            "network_interface_id": "eni-0f532247b4fac6f2a",
            "private_ip": "172.16.2.197",
            "public_ip": "54.255.37.238",
            "subnet_id": "subnet-0b3ea9c4bc27b8c17"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:route-table/rtb-0896ba8a93979b53a",
            "id": "rtb-0896ba8a93979b53a",
            "owner_id": "921649896359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0401094cccf516a88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:route-table/rtb-01a4bb8b8fb800bf1",
            "id": "rtb-01a4bb8b8fb800bf1",
            "owner_id": "921649896359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa18cd7f348cef5e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:route-table/rtb-095848eaae61c9315",
            "id": "rtb-095848eaae61c9315",
            "owner_id": "921649896359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aba73360cfd43408",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a07d1e4baf89d69b",
            "route_table_id": "rtb-095848eaae61c9315",
            "subnet_id": "subnet-0892fa5c8aa6fb873"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939b4c20c3da16b2",
            "route_table_id": "rtb-095848eaae61c9315",
            "subnet_id": "subnet-0b3ea9c4bc27b8c17"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06322904232076c9e",
            "route_table_id": "rtb-0896ba8a93979b53a",
            "subnet_id": "subnet-0787dfab4a8ced3ca"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09df699d4b8e9e4f6",
            "route_table_id": "rtb-01a4bb8b8fb800bf1",
            "subnet_id": "subnet-0dff909f91710d0bb"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:security-group/sg-0f30acd5719af78eb",
            "description": "SG for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f30acd5719af78eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "921649896359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:security-group/sg-0a5caa756181188fe",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5caa756181188fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "921649896359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:subnet/subnet-0787dfab4a8ced3ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0787dfab4a8ced3ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921649896359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:subnet/subnet-0dff909f91710d0bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dff909f91710d0bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921649896359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:subnet/subnet-0892fa5c8aa6fb873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0892fa5c8aa6fb873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921649896359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:subnet/subnet-0b3ea9c4bc27b8c17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3ea9c4bc27b8c17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921649896359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-01ed0b347290ee89b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921649896359:vpc/vpc-01ed0b347290ee89b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0022a9a60cafbdd51",
            "default_route_table_id": "rtb-032950b2b305e3e41",
            "default_security_group_id": "sg-027aec7042770c7a7",
            "dhcp_options_id": "dopt-75555612",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ed0b347290ee89b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032950b2b305e3e41",
            "owner_id": "921649896359",
            "tags": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}